force-app/main/default/objects/Lead/fields/DU_BusinessPartnerID__c.field-meta.xml
<CustomField>
    <fullName>DU_BusinessPartnerID__c</fullName>
    <description>CDM: Holds an external ID for the Lead record from an external source system.
Availability 2.0.0.1</description>
    <externalId>true</externalId>
    <inlineHelpText>Holds an external ID for the Lead record from an external source system.</inlineHelpText>
    <label>Business Partner ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>