force-app/main/default/objects/Lead/fields/DU_DPStatus__c.field-meta.xml
<CustomField>
    <fullName>DU_DPStatus__c</fullName>
    <description>CDM: Stores the data processing status value and is used to restrict processing of the records for various user roles or to flag record for the deletion process</description>
    <inlineHelpText>Stores the data processing status value from Customer Master Data System and will be used to hide the records from various user roles.</inlineHelpText>
    <label>DP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_DPStatus</valueSetName>
    </valueSet>
</CustomField>