force-app/main/default/objects/Lead/fields/DU_EMailVerified__c.field-meta.xml
<CustomField>
    <fullName>DU_EMailVerified__c</fullName>
    <description>CDM: Indicates if the email is verified by customer confirming the access to the email address. Availability 2.1.0.2</description>
    <inlineHelpText>Indicates if the email is verified by customer confirming the access to the email address.</inlineHelpText>
    <label>E-Mail Verified</label>
    <type>Date</type>
</CustomField>