force-app/main/default/objects/Lead/fields/DU_IsB2B__c.field-meta.xml
<CustomField>
    <fullName>DU_IsB2B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Determines whether the lead record is a B2B lead or not.</description>
    <inlineHelpText>Determines whether the lead record is a B2B lead or not.</inlineHelpText>
    <label>Is B2B?</label>
    <type>Checkbox</type>
</CustomField>