force-app/main/default/objects/Lead/fields/DU_MobileVerified__c.field-meta.xml
<CustomField>
    <fullName>DU_MobileVerified__c</fullName>
    <description>CDM: Indicates if the email is verified by customer confirming the access to the mobile number. Availability 2.1.0-2</description>
    <inlineHelpText>Indicates if the email is verified by customer confirming the access to the mobile number.</inlineHelpText>
    <label>Mobile Verified</label>
    <type>Date</type>
</CustomField>