force-app/main/default/objects/Lead/fields/DU_PreviousOwner__c.field-meta.xml
<CustomField>
    <fullName>DU_PreviousOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Stores the previous owner of the record for GDPR purposes to switch back to this owner in case the record will be set to unrestricted processing again</description>
    <inlineHelpText>Previous record owner, relevant for data protection by default</inlineHelpText>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>