force-app/main/default/objects/Lead/fields/DU_SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>DU_SourceSystem__c</fullName>
    <description>CDM: Contains the name of the source system of this record</description>
    <label>Source System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>