force-app/main/default/objects/Lead/fields/DU_SourceSystemChangedDate__c.field-meta.xml
<CustomField>
    <fullName>DU_SourceSystemChangedDate__c</fullName>
    <description>CDM: Contains the date the record was last changed in the source system (timebased validity of data)</description>
    <label>Source System Changed Date</label>
    <type>Date</type>
</CustomField>