force-app/main/default/objects/Lead/validationRules/DU_DPStatusDeleteValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_DPStatusDeleteValidation</fullName>
    <active>true</active>
    <description>DP Status can not be changed to Delete if previous status was not LockedForDeletion</description>
    <errorConditionFormula>AND(ISCHANGED(DU_DPStatus__c),ISPICKVAL(DU_DPStatus__c,&apos;Deleted&apos;),Not(ISPICKVAL(PRIORVALUE(DU_DPStatus__c) ,&apos;LockedForDeletion&apos;)))</errorConditionFormula>
    <errorMessage>Setting deletion status is only allowed when partner status is LockedForDeletion</errorMessage>
</ValidationRule>