force-app/main/default/objects/Lead/validationRules/DU_EmailMandatoryForB2C.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_EmailMandatoryForB2C</fullName>
    <active>true</active>
    <description>Email is mandatory for B2C Leads.</description>
    <errorConditionFormula>!DU_IsB2B__c &amp;&amp; ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email is mandatory for B2C Leads.</errorMessage>
</ValidationRule>