force-app/main/default/objects/Lead/validationRules/DU_LeadMustHaveIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_LeadMustHaveIndividual</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Individual.Id) &amp;&amp; !IsConverted</errorConditionFormula>
    <errorDisplayField>IndividualId</errorDisplayField>
    <errorMessage>Every Lead record must have an Individual assigned.</errorMessage>
</ValidationRule>